fix: harden project overview query mapping